--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 
-.body-initial {background-color: rgba(246, 226, 185, 1) !important;}
-.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1474394621033-3 {top: 5px; left: 0px; background-color: transparent;}.silex-id-1474394621032-2 {min-height: 622px; background-color: transparent;}.silex-id-1561020553543-0 {width: 1539px; min-height: 1083px; background-color: rgb(255, 255, 255); top: 0px; left: -71px;}
+
+.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1474394621033-3 {top: 5px; left: 0px; background-color: transparent;}.silex-id-1474394621032-2 {min-height: 622px; background-color: transparent;}.silex-id-1562250509929-0 {width: 345px; min-height: 150px; top: 112px; left: 529px;}.silex-id-1562250527149-1 {width: 335px; min-height: 190px; top: 336px; left: 533px;}
 .text-element > .silex-element-content {font-family: 'Roboto', sans-serif;}
 .website-width {width: 1400px;}
-.style-open-sans h2 {font-size: 20px;}.style-open-sans.text-element > .silex-element-content {font-family: 'Open Sans Condensed', sans-serif; color: #9F9B9B; line-height: 1;}.style-open-sans b {color: #9A1915; text-transform: uppercase;}.style-open-sans ul li {list-style-type: none; text-transform: uppercase; padding-left: 20px; padding-right: 20px;}
+.style-open-sans h2 {font-size: 30px; background-color: #FEE3BB; padding-top: 40px; padding-left: 40px; padding-bottom: 40px; padding-right: 40px; border-style: solid; border-width: 1px;}.style-open-sans.text-element > .silex-element-content {font-family: 'Open Sans Condensed', sans-serif; color: #9F9B9B; text-align: center; line-height: 1;}.style-open-sans b {color: #9A1915; text-transform: uppercase;}.style-open-sans ul li {list-style-type: none; text-transform: uppercase; padding-left: 20px; padding-right: 20px;}
 .style-mitr h3 {font-size: 20px; color: #9A1915; text-align: right; line-height: 1;}.style-mitr.text-element > .silex-element-content {font-family: 'Mitr', sans-serif; line-height: 1;}body.silex-runtime {opacity: 1;}
